Revision history for perl distribution Mojolicious-Plugin-AssetPack

1.05 Not Released
 - Need to "use CSS::Sass 3.3.0" to avoid test failures on missing features

1.04 2016-04-08T22:40:29+0200
 - Fix Pipe::Reloader and files from def file
 - Change default Pipe::Reloader strategy to "document" to make reloading
   JavaScript more robust.

1.03 2016-04-08T20:15:31+0200
 - Add Pipe::Reloader for instant refresh in browser on asset change #72
 - Marked old modules as deprecated

1.02 2016-04-08T14:30:19+0200
 - Add support for "sass_functions" #68
   Contributor: Mark Grimes
 - Fix 2 naked subroutines
 - Fix t/sass.t: #919191 != #909090
 - Skip more old tests by default

1.01 2016-04-06T16:10:06+0200
 - Cannot load CSS::Minifier::XS in old code - The module is optional
 - Cannot load JavaScript::Minifier::XS in old code - The module is optional

1.00 2016-04-02T21:26:35+0200
 - Rewrote the module. Breaking changes might occur.
 - Changed from "pre-processors" to "pipes"

0.69 2015-12-02T16:37:36+0100
 - Fix "uninitialized value" warning in Scss.pm line 203 #65
 - Fix fetch() from $app

0.68 2015-09-28T08:28:29+0200
 - Will skip tests unless possible to write to out_dir

0.67 2015-09-27T15:24:23+0200
 - Fix asset can be read-only

0.66 2015-09-27T14:56:56+0200
 - Skip some tests on windows
 - Remove EXPERIMENTAL remark for wildcards in filenames #52
 - Remove EXPERIMENTAL remark from headers()
 - Remove EXPERIMENTAL remark from source_paths()

0.65 2015-09-25T16:55:49+0200
 - Add EXPERIMENTAL fixed mapping between moniker to packed files #64
 - Add EXPERIMENTAL test_app() to ensure all assets are created
 - Change headers() into a method
 - Change out_dir() into a read-only method, as documented
 - Remove EXPERIMENTAL support for reloader.js
 - Remove deprecated preprocessor() method
 - Remove support for in-memory assets #64
 - Fix memory leak

0.64 2015-09-20T11:44:26+0200
 - Add "SHIPPING" section to Cookbook